--- a/public/installation/index.html
+++ b/public/installation/index.html
@@ -26,17 +26,17 @@
     <link href="../installation/index.xml" rel="alternate" type="application/rss+xml" title="安装维护 :: HaBox 技术支持站">
     <link href="../installation/index.print.html" rel="alternate" type="text/html" title="安装维护 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725546551" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1725546551" rel="stylesheet">
-    <link href="../css/auto-complete.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725546551" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1725546551" rel="stylesheet">
-    <link href="../css/fonts.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725546551" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1725546551" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1725546551" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1725546551" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1725546551" rel="stylesheet">
-    <link href="../css/print.css?1725546551" rel="stylesheet" media="print">
-    <script src="../js/variant.js?1725546551"></script>
+    <link href="../css/fontawesome-all.min.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725608895" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1725608895" rel="stylesheet">
+    <link href="../css/auto-complete.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725608895" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1725608895" rel="stylesheet">
+    <link href="../css/fonts.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725608895" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1725608895" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1725608895" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1725608895" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1725608895" rel="stylesheet">
+    <link href="../css/print.css?1725608895" rel="stylesheet" media="print">
+    <script src="../js/variant.js?1725608895"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -111,11 +111,7 @@
 
 <p>Discover what this Hugo theme is all about and the core-concepts behind it.</p>
 
-            <footer class="footline">
-            </footer>
-          </article>
-        </div>
-      </main><script
+<script
   id="utteranc"
   src="https://utteranc.es/client.js"
   repo="cntv-chat/ha-box"
@@ -139,6 +135,11 @@
 </script>
 
 
+            <footer class="footline">
+            </footer>
+          </article>
+        </div>
+      </main>
     </div>
     <aside id="R-sidebar" class="default-animation showVisitedLinks">
       <div id="R-header-topbar" class="default-animation"></div>
@@ -204,13 +205,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../js/auto-complete.js?1725546551" defer></script>
-        <script src="../js/lunr/lunr.min.js?1725546551" defer></script>
-        <script src="../js/lunr/lunr.stemmer.support.min.js?1725546551" defer></script>
-        <script src="../js/lunr/lunr.multi.min.js?1725546551" defer></script>
-        <script src="../js/lunr/lunr.en.min.js?1725546551" defer></script>
-        <script src="../js/lunr/lunr.zh.min.js?1725546551" defer></script>
-        <script src="../js/search.js?1725546551" defer></script>
+        <script src="../js/auto-complete.js?1725608895" defer></script>
+        <script src="../js/lunr/lunr.min.js?1725608895" defer></script>
+        <script src="../js/lunr/lunr.stemmer.support.min.js?1725608895" defer></script>
+        <script src="../js/lunr/lunr.multi.min.js?1725608895" defer></script>
+        <script src="../js/lunr/lunr.en.min.js?1725608895" defer></script>
+        <script src="../js/lunr/lunr.zh.min.js?1725608895" defer></script>
+        <script src="../js/search.js?1725608895" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -289,15 +290,22 @@
               </li>
             </ul>
           </div>
-          <div id="R-footer" class="footerFooter showFooter">
+          <div id="R-footer" class="footerFooter showFooter"><script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
+<p><span id="busuanzi_container_site_pv">本站总访问量 <span id="busuanzi_value_site_pv"></span> 次  </span></p>
+<span id="busuanzi_container_site_uv">您是本站第 <span id="busuanzi_value_site_uv"></span> 位访问者</span>
+
 	    <p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p>
+
           </div>
         </div>
       </div>
     </aside>
 
-    <script src="../js/clipboard.min.js?1725546551" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1725546551" defer></script>
-    <script src="../js/theme.js?1725546551" defer></script>
+    <script src="../js/clipboard.min.js?1725608895" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1725608895" defer></script>
+    <script src="../js/theme.js?1725608895" defer></script>
+
+
   </body>
 </html>
