--- a/public/network/free-vless-node/index.print.html
+++ b/public/network/free-vless-node/index.print.html
@@ -31,18 +31,18 @@
     <link href="http://localhost:1313/network/free-vless-node/index.html" rel="canonical" type="text/html" title="搭建免费科学上网节点 :: HaBox 技术支持站">
     <link href="../../network/free-vless-node/index.xml" rel="alternate" type="application/rss+xml" title="搭建免费科学上网节点 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725516187" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725516187" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725516187" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725516187" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725516187" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725516187" rel="stylesheet">
-    <link href="../../css/fonts.css?1725516187" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725516187" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725516187" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725516187" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725516187" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725516187" rel="stylesheet">
-    <link href="../../css/print.css?1725516187" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1725516187" rel="stylesheet">
-    <script src="../../js/variant.js?1725516187"></script>
+    <link href="../../css/fontawesome-all.min.css?1725607951" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725607951" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725607951" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725607951" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725607951" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725607951" rel="stylesheet">
+    <link href="../../css/fonts.css?1725607951" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725607951" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725607951" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725607951" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725607951" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725607951" rel="stylesheet">
+    <link href="../../css/print.css?1725607951" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1725607951" rel="stylesheet">
+    <script src="../../js/variant.js?1725607951"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -114,32 +114,32 @@
 <p><a href="https://4i5i-my.sharepoint.com/:u:/g/personal/sosel_4i5i_onmicrosoft_com/EQr1zW3GUINKptRic9MlSKIBOmUXEukBXOzK6oq-ED0QQQ?e=cTDsBR" rel="external" target="_self">备用地址</a> （如果你打开不github的话，可以试试从onedrive下载worker-vless.js文件）</p>
 <h2 id="在cloudflare添加网站">在Cloudflare添加网站</h2>
 <p>登陆Cloudflare，然后添加网站，就是将你刚注册的域名添加到这里</p>
-<p><a href="#R-image-4109aab340032eca9747cece5546b192" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b1c3498eee818656643b898a86c72fcd77eaabd3.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4109aab340032eca9747cece5546b192"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b1c3498eee818656643b898a86c72fcd77eaabd3.png"></a></p>
+<p><a href="#R-image-7ed953e10a54407ccd3bcb58a70bc292" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b1c3498eee818656643b898a86c72fcd77eaabd3.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7ed953e10a54407ccd3bcb58a70bc292"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b1c3498eee818656643b898a86c72fcd77eaabd3.png"></a></p>
 <p>然后选择<strong>免费</strong>的方案就行，如下图，然后<strong>继续</strong></p>
-<p><a href="#R-image-b239a4368a8fbf6fc9198ffda983d9b4" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/90241e3e480226358c120d6be86510c2587b268f.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b239a4368a8fbf6fc9198ffda983d9b4"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/90241e3e480226358c120d6be86510c2587b268f.png"></a></p>
+<p><a href="#R-image-62e8fb7d70438dc9de7e726fed3ad7b7" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/90241e3e480226358c120d6be86510c2587b268f.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-62e8fb7d70438dc9de7e726fed3ad7b7"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/90241e3e480226358c120d6be86510c2587b268f.png"></a></p>
 <p>此时我们先不添加DNS，先把域名解析服务器改到Cloudflare，点击左边栏 <strong>DNS</strong>，记下Cloudflare名称服务器地址，你看到的可能和我看到不一定一样，别弄错了。</p>
-<p><a href="#R-image-acff8b306402f03a6bdecb138894cb23" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/619ee5212f9f721c3c60ba3ad41a855f02ccc158.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-acff8b306402f03a6bdecb138894cb23"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/619ee5212f9f721c3c60ba3ad41a855f02ccc158.png"></a></p>
+<p><a href="#R-image-869f0c9a443b95f35e0ad8db849e4fab" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/619ee5212f9f721c3c60ba3ad41a855f02ccc158.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-869f0c9a443b95f35e0ad8db849e4fab"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/619ee5212f9f721c3c60ba3ad41a855f02ccc158.png"></a></p>
 <p>去域名注册平台后台https://www.namesilo.com/account_domains.php</p>
-<p><a href="#R-image-5a55101559028a26ca5eba7b05cfdda5" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/deaa5b81ad3bc0b61f0a99b1b3309a98d8ef4a77.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5a55101559028a26ca5eba7b05cfdda5"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/deaa5b81ad3bc0b61f0a99b1b3309a98d8ef4a77.jpeg"></a></p>
+<p><a href="#R-image-79f32aa09ee8633c38f058537029e585" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/deaa5b81ad3bc0b61f0a99b1b3309a98d8ef4a77.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-79f32aa09ee8633c38f058537029e585"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/deaa5b81ad3bc0b61f0a99b1b3309a98d8ef4a77.jpeg"></a></p>
 <p>填入Cloudflare的名称服务器地址，然后提交（submit），名称服务器生效可能要等一段时间</p>
-<p><a href="#R-image-ee58085f751099933b60794bd19824e7" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/73fd0ce7fd47d3e25d5035f6af78106fd531509a.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ee58085f751099933b60794bd19824e7"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/73fd0ce7fd47d3e25d5035f6af78106fd531509a.png"></a></p>
+<p><a href="#R-image-9c27c5efff5e308bb89fe4bf25e732e1" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/73fd0ce7fd47d3e25d5035f6af78106fd531509a.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9c27c5efff5e308bb89fe4bf25e732e1"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/73fd0ce7fd47d3e25d5035f6af78106fd531509a.png"></a></p>
 <h2 id="创建应用程序">创建应用程序</h2>
 <p>回到Cloudflare，导航到<strong>Workers 和 Pages</strong> 创建应用程序</p>
-<p><a href="#R-image-7cb1852ea96808a0439b90d646641a8b" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6202273f3867236110d6a2a3e9d4a48ba7b52446.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-7cb1852ea96808a0439b90d646641a8b"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6202273f3867236110d6a2a3e9d4a48ba7b52446.jpeg"></a></p>
-<p><a href="#R-image-4238eac5a44f4bbf1c2bd959fb58dc1d" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/04affed533e6f7184b4c7420b8e3e3f2cb46e6b0.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4238eac5a44f4bbf1c2bd959fb58dc1d"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/04affed533e6f7184b4c7420b8e3e3f2cb46e6b0.png"></a></p>
+<p><a href="#R-image-494382d247d3deecbaf4da0970b8378d" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6202273f3867236110d6a2a3e9d4a48ba7b52446.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-494382d247d3deecbaf4da0970b8378d"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6202273f3867236110d6a2a3e9d4a48ba7b52446.jpeg"></a></p>
+<p><a href="#R-image-5241bee18554c5422137f49a2bd1a71d" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/04affed533e6f7184b4c7420b8e3e3f2cb46e6b0.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5241bee18554c5422137f49a2bd1a71d"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/04affed533e6f7184b4c7420b8e3e3f2cb46e6b0.png"></a></p>
 <p>名称可以随意，完了点击部署按钮，代码先不管它</p>
-<p><a href="#R-image-cb651a0e2926db25ff365b0a2b23906f" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/045bcecb3b15412597fef3db606a8de38b5b7c9e.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-cb651a0e2926db25ff365b0a2b23906f"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/045bcecb3b15412597fef3db606a8de38b5b7c9e.png"></a></p>
+<p><a href="#R-image-3ea4d4892030e3f923ce4a1d24a7d054" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/045bcecb3b15412597fef3db606a8de38b5b7c9e.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3ea4d4892030e3f923ce4a1d24a7d054"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/045bcecb3b15412597fef3db606a8de38b5b7c9e.png"></a></p>
 <p>Worker部署成功</p>
-<p><a href="#R-image-4d858c974269c6e0ea6690eac381db0e" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d592ffaed5f33e6bc9bdadb89267e73e87d09aeb.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4d858c974269c6e0ea6690eac381db0e"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d592ffaed5f33e6bc9bdadb89267e73e87d09aeb.png"></a></p>
+<p><a href="#R-image-20ca629a78140b4f601f6df248860220" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d592ffaed5f33e6bc9bdadb89267e73e87d09aeb.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-20ca629a78140b4f601f6df248860220"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d592ffaed5f33e6bc9bdadb89267e73e87d09aeb.png"></a></p>
 <h2 id="替换脚本代码">替换脚本代码</h2>
 <p>点击编辑代码，将https://github.com/zizifn/edgetunnel/blob/main/src/worker-vless.js代码复制过来，贴到编辑器里面替换原来的内容</p>
 <p>修改两个地方：</p>
@@ -149,19 +149,43 @@
 <p>proxyIP<em>我测试了也可以不用改，空着就行</em></p>
 <p><strong>保存并部署</strong>（按钮在屏幕右上角）</p>
 <h2 id="绑定域名">绑定域名</h2>
-<p><a href="#R-image-32aae37f2e248bcb0dfeb85ec012c0bc" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/42db9218a49c38b1e5fc04f5a965596776ad3be3.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-32aae37f2e248bcb0dfeb85ec012c0bc"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/42db9218a49c38b1e5fc04f5a965596776ad3be3.png"></a></p>
-<p><a href="#R-image-95eb4173c343c5612fb7be36c1804137" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/67c86bffc006e2047714fe596cd6d07f63abae6f.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-95eb4173c343c5612fb7be36c1804137"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/67c86bffc006e2047714fe596cd6d07f63abae6f.png"></a></p>
+<p><a href="#R-image-600bd0b343f2872d975eeeedd9e7330b" class="lightbox-link"><img alt="notion image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/42db9218a49c38b1e5fc04f5a965596776ad3be3.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-600bd0b343f2872d975eeeedd9e7330b"><img alt="notion image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/42db9218a49c38b1e5fc04f5a965596776ad3be3.png"></a></p>
+<p><a href="#R-image-1bf522250a776e5b81562b78ad4da080" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/67c86bffc006e2047714fe596cd6d07f63abae6f.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1bf522250a776e5b81562b78ad4da080"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/67c86bffc006e2047714fe596cd6d07f63abae6f.png"></a></p>
 <p>自定义域前缀可以随意，根据自己需要填写然后点击“添加自定义域”，等一会儿生效后就可以用了。。。</p>
 <h2 id="配置科学上网客户端">配置科学上网客户端</h2>
 <p>在浏览器地址栏输入你刚配置的自定义域+代码中配置的userID，得到相应的科学上网的配置参数</p>
 <p>比如：https://hi.cntv.chat/6efcf080-745f-42c0-a0e6-4b0f9a2f8f1c</p>
-<p><a href="#R-image-c498c197a78dd231f0d2fe61498190db" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a762dcabf2d2ef2fd003f3bec59942c9ae2d21f0.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c498c197a78dd231f0d2fe61498190db"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a762dcabf2d2ef2fd003f3bec59942c9ae2d21f0.png"></a></p>
+<p><a href="#R-image-09ec79b99d02026e22bfc1ecf1f7dd68" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a762dcabf2d2ef2fd003f3bec59942c9ae2d21f0.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-09ec79b99d02026e22bfc1ecf1f7dd68"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a762dcabf2d2ef2fd003f3bec59942c9ae2d21f0.png"></a></p>
 <p>复制图上标记的内容，到科学上网工具中通过剪贴板导入或手动输入配置参数，注意协议是VLESS。我PC端用的V2rayA，安卓手机用的V2rayNG</p>
 <p>好了，本教程到此结束，快去享受免费、快速的、自由的网络去吧！</p>
 <p>若有不明白或遇到什么问题，请给我留言。</p>
+
+<script
+  id="utteranc"
+  src="https://utteranc.es/client.js"
+  repo="cntv-chat/ha-box"
+  issue-term="pathname"
+  theme="github-light"
+  crossorigin="anonymous"
+  async
+></script>
+<script>
+  document.getElementById("theme-toggle").addEventListener("click", () => {
+    const theme = document.body.className.includes("dark")
+      ? "github-light"
+      : "photon-dark";
+    const message = {
+      type: "set-theme",
+      theme: theme,
+    };
+    const utteranc = document.querySelector(".utterances-frame");
+    utteranc.contentWindow.postMessage(message, "https://utteranc.es");
+  });
+</script>
+
 
             <footer class="footline">
             </footer>
@@ -170,8 +194,10 @@
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1725516187" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725516187" defer></script>
-    <script src="../../js/theme.js?1725516187" defer></script>
+    <script src="../../js/clipboard.min.js?1725607951" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725607951" defer></script>
+    <script src="../../js/theme.js?1725607951" defer></script>
+
+
   </body>
 </html>
