--- a/public/network/linux-partition/index.html
+++ b/public/network/linux-partition/index.html
@@ -43,17 +43,17 @@
     <link href="../../network/linux-partition/index.xml" rel="alternate" type="application/rss+xml" title="linux下无损扩容分区方法 :: HaBox 技术支持站">
     <link href="../../network/linux-partition/index.print.html" rel="alternate" type="text/html" title="linux下无损扩容分区方法 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725546551" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725546551" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725546551" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725546551" rel="stylesheet">
-    <link href="../../css/fonts.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725546551" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725546551" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725546551" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725546551" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725546551" rel="stylesheet">
-    <link href="../../css/print.css?1725546551" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1725546551"></script>
+    <link href="../../css/fontawesome-all.min.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725608895" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725608895" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725608895" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725608895" rel="stylesheet">
+    <link href="../../css/fonts.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725608895" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725608895" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725608895" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725608895" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725608895" rel="stylesheet">
+    <link href="../../css/print.css?1725608895" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1725608895"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -146,11 +146,7 @@
 <p>可以使用</p>
 <div class="highlight wrap-code"><pre tabindex="0"><code>df -h sudo fdisk -l</code></pre></div><p>等命令查看。</p>
 
-            <footer class="footline">
-            </footer>
-          </article>
-        </div>
-      </main><script
+<script
   id="utteranc"
   src="https://utteranc.es/client.js"
   repo="cntv-chat/ha-box"
@@ -174,6 +170,11 @@
 </script>
 
 
+            <footer class="footline">
+            </footer>
+          </article>
+        </div>
+      </main>
     </div>
     <aside id="R-sidebar" class="default-animation showVisitedLinks">
       <div id="R-header-topbar" class="default-animation"></div>
@@ -239,13 +240,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1725546551" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1725546551" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725546551" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1725546551" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1725546551" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1725546551" defer></script>
-        <script src="../../js/search.js?1725546551" defer></script>
+        <script src="../../js/auto-complete.js?1725608895" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1725608895" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725608895" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1725608895" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1725608895" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1725608895" defer></script>
+        <script src="../../js/search.js?1725608895" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -324,15 +325,22 @@
               </li>
             </ul>
           </div>
-          <div id="R-footer" class="footerFooter showFooter">
+          <div id="R-footer" class="footerFooter showFooter"><script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
+<p><span id="busuanzi_container_site_pv">本站总访问量 <span id="busuanzi_value_site_pv"></span> 次  </span></p>
+<span id="busuanzi_container_site_uv">您是本站第 <span id="busuanzi_value_site_uv"></span> 位访问者</span>
+
 	    <p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p>
+
           </div>
         </div>
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1725546551" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725546551" defer></script>
-    <script src="../../js/theme.js?1725546551" defer></script>
+    <script src="../../js/clipboard.min.js?1725608895" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725608895" defer></script>
+    <script src="../../js/theme.js?1725608895" defer></script>
+
+
   </body>
 </html>
