--- a/public/404.html
+++ b/public/404.html
@@ -21,17 +21,17 @@
     <title>404 Page not found :: HaBox 技术支持站</title>
     <base href="http://localhost:1313/"><link rel="icon" href="./images/favicon.png" type="image/png">
 
-    <link href="./css/fontawesome-all.min.css?1725502867" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1725502867" rel="stylesheet"></noscript>
-    <link href="./css/nucleus.css?1725502867" rel="stylesheet">
-    <link href="./css/auto-complete.css?1725502867" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1725502867" rel="stylesheet"></noscript>
-    <link href="./css/perfect-scrollbar.min.css?1725502867" rel="stylesheet">
-    <link href="./css/fonts.css?1725502867" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1725502867" rel="stylesheet"></noscript>
-    <link href="./css/theme.css?1725502867" rel="stylesheet">
-    <link href="./css/theme-relearn-auto.css?1725502867" rel="stylesheet" id="R-variant-style">
-    <link href="./css/chroma-relearn-auto.css?1725502867" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="./css/variant.css?1725502867" rel="stylesheet">
-    <link href="./css/print.css?1725502867" rel="stylesheet" media="print">
-    <script src="./js/variant.js?1725502867"></script>
+    <link href="./css/fontawesome-all.min.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1725547331" rel="stylesheet"></noscript>
+    <link href="./css/nucleus.css?1725547331" rel="stylesheet">
+    <link href="./css/auto-complete.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1725547331" rel="stylesheet"></noscript>
+    <link href="./css/perfect-scrollbar.min.css?1725547331" rel="stylesheet">
+    <link href="./css/fonts.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1725547331" rel="stylesheet"></noscript>
+    <link href="./css/theme.css?1725547331" rel="stylesheet">
+    <link href="./css/theme-relearn-auto.css?1725547331" rel="stylesheet" id="R-variant-style">
+    <link href="./css/chroma-relearn-auto.css?1725547331" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="./css/variant.css?1725547331" rel="stylesheet">
+    <link href="./css/print.css?1725547331" rel="stylesheet" media="print">
+    <script src="./js/variant.js?1725547331"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='.';
@@ -93,6 +93,9 @@
         width: 15rem;
       }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2927010945389974"
+     crossorigin="anonymous"></script>
+
   </head>
   <body class="mobile-support html notfound" data-url="./404.html">
     <div id="R-body" class="default-animation">
