--- a/public/access/mijia/index.html
+++ b/public/access/mijia/index.html
@@ -35,17 +35,17 @@
     <link href="../../access/mijia/index.xml" rel="alternate" type="application/rss+xml" title="将米家设备接入HomeAssistant :: HaBox 技术支持站">
     <link href="../../access/mijia/index.print.html" rel="alternate" type="text/html" title="将米家设备接入HomeAssistant :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725508239" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725508239" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725508239" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725508239" rel="stylesheet">
-    <link href="../../css/fonts.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725508239" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725508239" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725508239" rel="stylesheet">
-    <link href="../../css/print.css?1725508239" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1725508239"></script>
+    <link href="../../css/fontawesome-all.min.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725547331" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725547331" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725547331" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725547331" rel="stylesheet">
+    <link href="../../css/fonts.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725547331" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725547331" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725547331" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725547331" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725547331" rel="stylesheet">
+    <link href="../../css/print.css?1725547331" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1725547331"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -64,6 +64,9 @@
       window.T_No_results_found = `找不到"{0}"的结果`;
       window.T_N_results_found = `为"{0}"找到 {1} 个结果`;
     </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2927010945389974"
+     crossorigin="anonymous"></script>
+
   </head>
   <body class="mobile-support html disableInlineCopyToClipboard" data-url="../../access/mijia/index.html">
     <div id="R-body" class="default-animation">
@@ -137,16 +140,16 @@
 <h3 id="1-安装-xiaomi-miot-atuo">1 安装 Xiaomi Miot Atuo</h3>
 <p>接下来，我们需要安装 “Xiaomi Miot Atuo” 集成以将米家设备接入HomeAssistant。</p>
 <p>进入 HACS 页面，清除筛选方式（默认只显示已下载的）</p>
-<p><a href="#R-image-1f70e242e1489aa368851819b018ad78" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/70e2335f30d0ac09481483ab161fd31c8ccdae7d.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-1f70e242e1489aa368851819b018ad78"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/70e2335f30d0ac09481483ab161fd31c8ccdae7d.jpeg"></a></p>
+<p><a href="#R-image-7596b16058f0c0a2e55201fec7ec29f9" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/70e2335f30d0ac09481483ab161fd31c8ccdae7d.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7596b16058f0c0a2e55201fec7ec29f9"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/70e2335f30d0ac09481483ab161fd31c8ccdae7d.jpeg"></a></p>
 <p>然后在搜索框输入“xiaomi miot”，出来后点击它</p>
-<p><a href="#R-image-2c1103d4eee95fcd4b33e890bc63530a" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7dbb3b2832a340b7144704101831281b78997f9a.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-2c1103d4eee95fcd4b33e890bc63530a"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7dbb3b2832a340b7144704101831281b78997f9a.png"></a></p>
+<p><a href="#R-image-a4991e874a9bb14ce06dc4c7d9d11e41" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7dbb3b2832a340b7144704101831281b78997f9a.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a4991e874a9bb14ce06dc4c7d9d11e41"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7dbb3b2832a340b7144704101831281b78997f9a.png"></a></p>
 <p>点击右下角DOWNLOAD进行下载</p>
-<p><a href="#R-image-3bee5a1b839091b6966a32c68bea0688" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/c2e5a0057e07c7c71caa918194f809e2caa43ed4.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3bee5a1b839091b6966a32c68bea0688"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/c2e5a0057e07c7c71caa918194f809e2caa43ed4.png"></a></p>
-<p><a href="#R-image-2ad12686b7eff727a31a0cfc7e2ebee0" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/4052018b771c4df4176b353895c0596dcfb258a2.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-2ad12686b7eff727a31a0cfc7e2ebee0"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/4052018b771c4df4176b353895c0596dcfb258a2.jpeg"></a></p>
+<p><a href="#R-image-b54a3d614aad65cb09f1ad374138465b" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/c2e5a0057e07c7c71caa918194f809e2caa43ed4.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b54a3d614aad65cb09f1ad374138465b"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/c2e5a0057e07c7c71caa918194f809e2caa43ed4.png"></a></p>
+<p><a href="#R-image-cbb98101591121c59a14e11ed9e9d601" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/4052018b771c4df4176b353895c0596dcfb258a2.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-cbb98101591121c59a14e11ed9e9d601"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/4052018b771c4df4176b353895c0596dcfb258a2.jpeg"></a></p>
 <p>安装完集成之后需要重启 HomeAssistant。
 配置 → 系统 右上角有重启按钮</p>
 <h3 id="2-配置-xiaomi-miot-atuo">2 配置 Xiaomi Miot Atuo</h3>
@@ -154,40 +157,63 @@
 <p>点击“设置”，选择“设备与服务”
 切换到 “设备” 选项卡， 然后点击右下角 “添加设备”
 然后输入“xiaomi”，然后选择&quot;Xiaomi Miot Auto&quot;</p>
-<p><a href="#R-image-b29f4171f63d33c52e1105bec2ca76b9" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6522b231a80bf78d487a8fc545347c4b350d2730.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b29f4171f63d33c52e1105bec2ca76b9"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6522b231a80bf78d487a8fc545347c4b350d2730.jpeg"></a></p>
+<p><a href="#R-image-66982d7763776c27daa439b207d4f3a4" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6522b231a80bf78d487a8fc545347c4b350d2730.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-66982d7763776c27daa439b207d4f3a4"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6522b231a80bf78d487a8fc545347c4b350d2730.jpeg"></a></p>
 <p>选择“账号集成”，登录小米账号获取设备信息。</p>
-<p><a href="#R-image-c5119f6e54391af47aec8af07d700808" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/cd71249cb01282859a521a8a373a6e5629323f92.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c5119f6e54391af47aec8af07d700808"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/cd71249cb01282859a521a8a373a6e5629323f92.jpeg"></a></p>
-<p><a href="#R-image-3f6b778b766d984d69b245d662c45c28" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/92f4e0e5a705997eb38b985073bb5c8fa47a881a.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3f6b778b766d984d69b245d662c45c28"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/92f4e0e5a705997eb38b985073bb5c8fa47a881a.jpeg"></a></p>
+<p><a href="#R-image-0bec3850772e93912c193b6e68d4ffc2" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/cd71249cb01282859a521a8a373a6e5629323f92.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0bec3850772e93912c193b6e68d4ffc2"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/cd71249cb01282859a521a8a373a6e5629323f92.jpeg"></a></p>
+<p><a href="#R-image-2211a4e9771305e951fabda49cfde5bf" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/92f4e0e5a705997eb38b985073bb5c8fa47a881a.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2211a4e9771305e951fabda49cfde5bf"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/92f4e0e5a705997eb38b985073bb5c8fa47a881a.jpeg"></a></p>
 <p>按照配置指引完成剩余步骤，
 这里可以根据自身情况默认选择排除模式还是包含模式
 在设备列表中你想要接入 HomeAssistant 的设备。
 排除模式就是将设备列表中没有勾选色设备接入到Homeassistant
 包含模式就是将设备列表中已勾选的设备接入到Homeassistant</p>
-<p><a href="#R-image-a37c40bd4d4c6ac0d346cc8626b73880" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/c403c5c6840ffcc7de4c78bdedd16c2ade91c357.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a37c40bd4d4c6ac0d346cc8626b73880"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/c403c5c6840ffcc7de4c78bdedd16c2ade91c357.jpeg"></a></p>
+<p><a href="#R-image-53dfdf19aec1c133223a73155427b4dd" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/c403c5c6840ffcc7de4c78bdedd16c2ade91c357.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-53dfdf19aec1c133223a73155427b4dd"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/c403c5c6840ffcc7de4c78bdedd16c2ade91c357.jpeg"></a></p>
 <p>接下来就是设置设备所在区域。这样就算是将米家智能设&gt; 备接入进来了。</p>
 <blockquote>
 <p>上面有一句话：如果想集成网关子设备，请直接选择子设备接入，只接入网关不会自动集成子设备。自己体会，至此就算接入完成了。</p>
 </blockquote>
 <p>回到概览，就可以看到我们刚才接入的设备了</p>
-<p><a href="#R-image-854782645836f216b0ca6be11232359b" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/55cbe342ce51cb278d4599e0061df76d510d5b0b.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-854782645836f216b0ca6be11232359b"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/55cbe342ce51cb278d4599e0061df76d510d5b0b.jpeg"></a></p>
+<p><a href="#R-image-db2cf7fb3523ee20fd44c0875d156dbe" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/55cbe342ce51cb278d4599e0061df76d510d5b0b.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-db2cf7fb3523ee20fd44c0875d156dbe"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/55cbe342ce51cb278d4599e0061df76d510d5b0b.jpeg"></a></p>
 <p>在配置 - 设备与服务中就能看到Xiaomi Miot Auto</p>
-<p><a href="#R-image-0603f90176a858f63d25543eabcfdb33" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ad4e3cd4220230604a9b3354a652d2566cc1a322.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0603f90176a858f63d25543eabcfdb33"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ad4e3cd4220230604a9b3354a652d2566cc1a322.jpeg"></a></p>
+<p><a href="#R-image-5f8ac12b0d5f5b538eb653570594bb48" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ad4e3cd4220230604a9b3354a652d2566cc1a322.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5f8ac12b0d5f5b538eb653570594bb48"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ad4e3cd4220230604a9b3354a652d2566cc1a322.jpeg"></a></p>
 <p>点进去就可以看到接入了多少个设备，多少个实体</p>
 <p>我们进入米家插座，就能看到很多信息，并且可以进行更丰富的控制和设置，更多高级的功能，期待你的发现和研究</p>
-<p><a href="#R-image-e6f66e89dbc5b28d64adc4161b27e3ac" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/103b0749a541718c1a75e8ecea1cb438338f0ee0.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e6f66e89dbc5b28d64adc4161b27e3ac"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/103b0749a541718c1a75e8ecea1cb438338f0ee0.jpeg"></a></p>
+<p><a href="#R-image-f1abec31000f53b95837e611c24427d1" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/103b0749a541718c1a75e8ecea1cb438338f0ee0.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f1abec31000f53b95837e611c24427d1"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/103b0749a541718c1a75e8ecea1cb438338f0ee0.jpeg"></a></p>
 
             <footer class="footline">
             </footer>
           </article>
         </div>
-      </main>
+      </main><script
+  id="utteranc"
+  src="https://utteranc.es/client.js"
+  repo="cntv-chat/ha-box"
+  issue-term="pathname"
+  theme="github-light"
+  crossorigin="anonymous"
+  async
+></script>
+<script>
+  document.getElementById("theme-toggle").addEventListener("click", () => {
+    const theme = document.body.className.includes("dark")
+      ? "github-light"
+      : "photon-dark";
+    const message = {
+      type: "set-theme",
+      theme: theme,
+    };
+    const utteranc = document.querySelector(".utterances-frame");
+    utteranc.contentWindow.postMessage(message, "https://utteranc.es");
+  });
+</script>
+
+
     </div>
     <aside id="R-sidebar" class="default-animation showVisitedLinks">
       <div id="R-header-topbar" class="default-animation"></div>
@@ -253,13 +279,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1725508239" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1725508239" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725508239" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1725508239" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1725508239" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1725508239" defer></script>
-        <script src="../../js/search.js?1725508239" defer></script>
+        <script src="../../js/auto-complete.js?1725547331" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1725547331" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725547331" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1725547331" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1725547331" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1725547331" defer></script>
+        <script src="../../js/search.js?1725547331" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -345,8 +371,8 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1725508239" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725508239" defer></script>
-    <script src="../../js/theme.js?1725508239" defer></script>
+    <script src="../../js/clipboard.min.js?1725547331" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725547331" defer></script>
+    <script src="../../js/theme.js?1725547331" defer></script>
   </body>
 </html>
