--- a/public/installation/hacs/index.print.html
+++ b/public/installation/hacs/index.print.html
@@ -27,18 +27,18 @@
     <link href="http://localhost:1313/installation/hacs/index.html" rel="canonical" type="text/html" title="HACS安装激活 :: HaBox 技术支持站">
     <link href="../../installation/hacs/index.xml" rel="alternate" type="application/rss+xml" title="HACS安装激活 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725546551" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725546551" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725546551" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725546551" rel="stylesheet">
-    <link href="../../css/fonts.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725546551" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725546551" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725546551" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725546551" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725546551" rel="stylesheet">
-    <link href="../../css/print.css?1725546551" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1725546551" rel="stylesheet">
-    <script src="../../js/variant.js?1725546551"></script>
+    <link href="../../css/fontawesome-all.min.css?1725607951" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725607951" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725607951" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725607951" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725607951" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725607951" rel="stylesheet">
+    <link href="../../css/fonts.css?1725607951" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725607951" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725607951" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725607951" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725607951" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725607951" rel="stylesheet">
+    <link href="../../css/print.css?1725607951" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1725607951" rel="stylesheet">
+    <script src="../../js/variant.js?1725607951"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -104,43 +104,38 @@
 <h2 id="二安装hacs">二、安装HACS</h2>
 <p>由于Homeassistant的安装五花八门，所以网上有很多教程看上去非常复杂，但是在HA Box中安装HACS非常简单，下面我们一起来看看怎么安装。</p>
 <p>配置 - 设备与服务 ，在集成选项卡右下角点<strong>添加集成</strong>按钮</p>
-<p><a href="#R-image-03e3430deab9cf2e42c7f2c4736a9a84" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-03e3430deab9cf2e42c7f2c4736a9a84"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg"></a></p>
-<p><a href="#R-image-8975d856af43c162d915aaa86b8d4eaf" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-8975d856af43c162d915aaa86b8d4eaf"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg"></a></p>
+<p><a href="#R-image-64d04bd8a0d3d778952288452be169c0" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-64d04bd8a0d3d778952288452be169c0"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg"></a></p>
+<p><a href="#R-image-f2136ea5d69a3b657899f14295f466c7" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f2136ea5d69a3b657899f14295f466c7"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg"></a></p>
 <p>在弹出窗口搜索HACS，你将看到HACS已经在列表里，然后点击它（整行随便点就行，右边的几个图标只是告诉你HACS的一些功能）</p>
-<p><a href="#R-image-55f43370c8a06c9e7e185cbadc244287" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-55f43370c8a06c9e7e185cbadc244287"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg"></a></p>
+<p><a href="#R-image-1debde2201bfb92fa9f339393008059b" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1debde2201bfb92fa9f339393008059b"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg"></a></p>
 <p>全勾选上，然后提交</p>
-<p><a href="#R-image-41dcb718c3c5fe40aeca5275323d2ced" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-41dcb718c3c5fe40aeca5275323d2ced"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg"></a></p>
+<p><a href="#R-image-911c6f0e165a76daa4fb80e99effeca5" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-911c6f0e165a76daa4fb80e99effeca5"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg"></a></p>
 <p>接下来是打开链接，进到github.com有个授权的动作</p>
-<p><a href="#R-image-f26c257300a217c25b278f2bcc20b0b9" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f26c257300a217c25b278f2bcc20b0b9"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg"></a></p>
+<p><a href="#R-image-2ec0d20897be2b12aba0bd06cab627d5" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2ec0d20897be2b12aba0bd06cab627d5"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg"></a></p>
 <p>不出以外的话，你将看到这个页面，复制刚才弹窗给你的验证码，直接鼠标全选上复制过去直接粘贴，然后点 Continue 继续</p>
-<p><a href="#R-image-113578f913d0f4bb208fc81224760b74" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-113578f913d0f4bb208fc81224760b74"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png"></a></p>
+<p><a href="#R-image-a3602e5e14d47f8a76409f024cf49fd6" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a3602e5e14d47f8a76409f024cf49fd6"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png"></a></p>
 <p>有时候会因为种种原因出现下面这个弹窗提示<strong>cloud_not_register</strong>,网络问题直接关闭从头再来多试几次</p>
 <p>如果出现下面这个页面说明你刚才的验证码没输错，可以点击Authorize hacs授权了</p>
-<p><a href="#R-image-73ad01fb89674c320dcfdf1dffd8e9dd" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-73ad01fb89674c320dcfdf1dffd8e9dd"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg"></a></p>
+<p><a href="#R-image-259b5e5f1becb47fce3076dd105bbe1e" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-259b5e5f1becb47fce3076dd105bbe1e"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg"></a></p>
 <p>OK,到这里说明已经配置成功了，可以关闭这个页面了。</p>
-<p><a href="#R-image-60b716959153876021fbf95d2b605485" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-60b716959153876021fbf95d2b605485"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png"></a></p>
+<p><a href="#R-image-ffb5dfdd03891f5a976227f6ca44243d" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ffb5dfdd03891f5a976227f6ca44243d"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png"></a></p>
 <p>返回到Homeassistant,HACS已经配置成功，并自动发现了家里的一些设备，可以对区域进行配置，告诉HACS这个设备是在客厅还是在卧室或者别的房间。当然你也可以直接点关闭或完成。</p>
-<p><a href="#R-image-9b17ede0309b9e60dcbe401ce545cc57" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9b17ede0309b9e60dcbe401ce545cc57"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png"></a></p>
+<p><a href="#R-image-58b15946c0a3b199de7377766b2049f1" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-58b15946c0a3b199de7377766b2049f1"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png"></a></p>
 <p>看，左侧已经出现HACS的连接，集成里面已配置列表已经有HACS了。</p>
-<p><a href="#R-image-a8812c9cee8111551f5260716ca69f25" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a8812c9cee8111551f5260716ca69f25"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg"></a></p>
+<p><a href="#R-image-7e35e9f8db02c5fad12338c6517e1ced" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7e35e9f8db02c5fad12338c6517e1ced"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg"></a></p>
 <p>此时你可能需要重启一下HA Box缓解一下激动的心情了</p>
 
-            <footer class="footline">
-            </footer>
-          </article>
-
-        </div>
-      </main><script
+<script
   id="utteranc"
   src="https://utteranc.es/client.js"
   repo="cntv-chat/ha-box"
@@ -164,9 +159,17 @@
 </script>
 
 
+            <footer class="footline">
+            </footer>
+          </article>
+
+        </div>
+      </main>
     </div>
-    <script src="../../js/clipboard.min.js?1725546551" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725546551" defer></script>
-    <script src="../../js/theme.js?1725546551" defer></script>
+    <script src="../../js/clipboard.min.js?1725607951" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725607951" defer></script>
+    <script src="../../js/theme.js?1725607951" defer></script>
+
+
   </body>
 </html>
