--- a/public/installation/wifi/index.print.html
+++ b/public/installation/wifi/index.print.html
@@ -27,18 +27,18 @@
     <link href="http://localhost:1313/installation/wifi/index.html" rel="canonical" type="text/html" title=" 给HA Box插上无线WIFI的翅膀 :: HaBox 技术支持站">
     <link href="../../installation/wifi/index.xml" rel="alternate" type="application/rss+xml" title=" 给HA Box插上无线WIFI的翅膀 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725508239" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725508239" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725508239" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725508239" rel="stylesheet">
-    <link href="../../css/fonts.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725508239" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725508239" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725508239" rel="stylesheet">
-    <link href="../../css/print.css?1725508239" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1725508239" rel="stylesheet">
-    <script src="../../js/variant.js?1725508239"></script>
+    <link href="../../css/fontawesome-all.min.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725547331" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725547331" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725547331" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725547331" rel="stylesheet">
+    <link href="../../css/fonts.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725547331" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725547331" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725547331" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725547331" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725547331" rel="stylesheet">
+    <link href="../../css/print.css?1725547331" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1725547331" rel="stylesheet">
+    <script src="../../js/variant.js?1725547331"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -57,6 +57,9 @@
       window.T_No_results_found = `找不到"{0}"的结果`;
       window.T_N_results_found = `为"{0}"找到 {1} 个结果`;
     </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2927010945389974"
+     crossorigin="anonymous"></script>
+
   </head>
   <body class="mobile-support print disableInlineCopyToClipboard" data-url="../../installation/wifi/index.html">
     <div id="R-body" class="default-animation">
@@ -97,12 +100,12 @@
 <h1 id="给ha-box插上无线wifi的翅膀"> 给HA Box插上无线WIFI的翅膀</h1>
 
 <p>由于我们选用的HA Box盒子是基于M401A,UNT403A,CM311-1A，都没有带无线模块，因此我们采购了一些USB无线网卡802.11n，该网卡可以在HA Box下使用。</p>
-<p><a href="#R-image-7ab89719c1871e44e0974a92460840c9" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409051036273.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-7ab89719c1871e44e0974a92460840c9"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409051036273.jpeg"></a></p>
+<p><a href="#R-image-363148b787cf96d143cbb9108eb19351" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409051036273.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-363148b787cf96d143cbb9108eb19351"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409051036273.jpeg"></a></p>
 <p>要配置无线网卡，你需要先连上网线，或者接上显示器和键盘。
 如果是已连上有线网络，那么在浏览器打开http://homeassistant.local:7681/ （或者用ip访问，比如http://192.168.3.209:7681/ ，请使用你HA Box实际的ip地址替换192.168.3.209），打开后你将看到如下界面</p>
-<p><a href="#R-image-74c3a04369ba0d36fee3c684339a7fa3" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/80151f8634398af9174d5c9dee81e241ef822a68.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-74c3a04369ba0d36fee3c684339a7fa3"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/80151f8634398af9174d5c9dee81e241ef822a68.jpeg"></a></p>
+<p><a href="#R-image-b0dde0d5e53b21aed33b5bc54a4d8917" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/80151f8634398af9174d5c9dee81e241ef822a68.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b0dde0d5e53b21aed33b5bc54a4d8917"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/80151f8634398af9174d5c9dee81e241ef822a68.jpeg"></a></p>
 <p>当然，如果你没有连有线网络，但是接连显示器和键盘，同样在显示器上你也将看到类似的界面。</p>
 <p>在ha&gt;提示符下输入“<strong>login</strong>”然后回车，进入root模式下。</p>
 <p>输入 “<strong>ip a</strong>”回车，你将会发现有如下的网卡信息，这就是刚插上的无线网卡了</p>
@@ -113,8 +116,8 @@
 在#提示符下（root模式）输入：
 <strong><code>nmcli device wifi</code></strong>
 然后回车，将看到能扫描到的wifi信号
-<a href="#R-image-3f75176db7ebdc301272dfe13d1b3129" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409040903689.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3f75176db7ebdc301272dfe13d1b3129"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409040903689.jpeg"></a></p>
+<a href="#R-image-9890135af19a81111548c8f571a1bc43" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409040903689.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9890135af19a81111548c8f571a1bc43"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409040903689.jpeg"></a></p>
 <p>连接wifi的命令如下：</p>
 <div class="highlight wrap-code"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-perl" data-lang="perl"><span style="display:flex;"><span>nmcli device wifi connect <span style="color:#e6db74">&#34;YOUR_SSID&#34;</span> password <span style="color:#e6db74">&#34;YOUR_WIFI_PASSWORD&#34;</span></span></span></code></pre></div><p>当你看到返回下面的信息时，说明连接成功连。需要注意的是该网卡只支持2.4G频段的wifi信号，如果你家wifi没有支持2.4G频段的信号，将连接失败。</p>
 <blockquote>
@@ -139,18 +142,41 @@ valid_lft forever preferred_lft forever</p>
 <blockquote>
 <p>http://192.168.3.210:8123/onboarding.html</p>
 </blockquote>
-<p><a href="#R-image-d0a31a91b421e08437b391c0ab28d080" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d0a31a91b421e08437b391c0ab28d080"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134.jpeg"></a></p>
+<p><a href="#R-image-3d07407c67425415075bc7982e8b4cb1" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3d07407c67425415075bc7982e8b4cb1"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134.jpeg"></a></p>
 
             <footer class="footline">
             </footer>
           </article>
 
         </div>
-      </main>
+      </main><script
+  id="utteranc"
+  src="https://utteranc.es/client.js"
+  repo="cntv-chat/ha-box"
+  issue-term="pathname"
+  theme="github-light"
+  crossorigin="anonymous"
+  async
+></script>
+<script>
+  document.getElementById("theme-toggle").addEventListener("click", () => {
+    const theme = document.body.className.includes("dark")
+      ? "github-light"
+      : "photon-dark";
+    const message = {
+      type: "set-theme",
+      theme: theme,
+    };
+    const utteranc = document.querySelector(".utterances-frame");
+    utteranc.contentWindow.postMessage(message, "https://utteranc.es");
+  });
+</script>
+
+
     </div>
-    <script src="../../js/clipboard.min.js?1725508239" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725508239" defer></script>
-    <script src="../../js/theme.js?1725508239" defer></script>
+    <script src="../../js/clipboard.min.js?1725547332" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725547332" defer></script>
+    <script src="../../js/theme.js?1725547332" defer></script>
   </body>
 </html>
