--- a/public/network/habox-over-greatwall/index.html
+++ b/public/network/habox-over-greatwall/index.html
@@ -35,17 +35,17 @@
     <link href="../../network/habox-over-greatwall/index.xml" rel="alternate" type="application/rss+xml" title="Ha盒子配置科学上网 :: HaBox 技术支持站">
     <link href="../../network/habox-over-greatwall/index.print.html" rel="alternate" type="text/html" title="Ha盒子配置科学上网 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725508239" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725508239" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725508239" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725508239" rel="stylesheet">
-    <link href="../../css/fonts.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725508239" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725508239" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725508239" rel="stylesheet">
-    <link href="../../css/print.css?1725508239" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1725508239"></script>
+    <link href="../../css/fontawesome-all.min.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725608895" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725608895" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725608895" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725608895" rel="stylesheet">
+    <link href="../../css/fonts.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725608895" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725608895" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725608895" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725608895" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725608895" rel="stylesheet">
+    <link href="../../css/print.css?1725608895" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1725608895"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -64,6 +64,9 @@
       window.T_No_results_found = `找不到"{0}"的结果`;
       window.T_N_results_found = `为"{0}"找到 {1} 个结果`;
     </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2927010945389974"
+     crossorigin="anonymous"></script>
+
   </head>
   <body class="mobile-support html disableInlineCopyToClipboard" data-url="../../network/habox-over-greatwall/index.html">
     <div id="R-body" class="default-animation">
@@ -124,28 +127,52 @@
 <p>前提，你已拥有可以用的梯子（节点），如果没有请参考：</p>
 <p><a href="../../network/free-vless-node/index.html" title="搭建免费科学上网节点">搭建免费科学上网节点</a></p>
 <p>加载项商店搜索&quot;加速&quot;，安装它（实际上就是v2raya,很好用的工具）</p>
-<p><a href="#R-image-030f7a9fc7eda97b213964b7b23d2f1c" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-030f7a9fc7eda97b213964b7b23d2f1c"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png"></a></p>
+<p><a href="#R-image-36968254771c2dd5872e7b8cc037d224" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-36968254771c2dd5872e7b8cc037d224"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png"></a></p>
 <p>安装完后，点启动，配置选项卡可以不用修改默认就行</p>
-<p><a href="#R-image-17fe433a5147351e56a3e9469a5f4cbb" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-17fe433a5147351e56a3e9469a5f4cbb"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png"></a></p>
+<p><a href="#R-image-cdb91df99c4dfb953e5bceea34f2cc61" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-cdb91df99c4dfb953e5bceea34f2cc61"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png"></a></p>
 <p>打开WEB UI，初次进入需要设置用户名密码，设置后请记好了。</p>
 <p>导入节点</p>
-<p><a href="#R-image-6ada66169518928903727d9849a9065e" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6ada66169518928903727d9849a9065e"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png"></a></p>
+<p><a href="#R-image-b3423261512d32481e94ce688406fb89" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b3423261512d32481e94ce688406fb89"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png"></a></p>
 <p>然后，选择，启动</p>
-<p><a href="#R-image-c14c0d10e353255d3ebd32ea1206c18d" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c14c0d10e353255d3ebd32ea1206c18d"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png"></a></p>
+<p><a href="#R-image-248b05b5bb0f70da8376c2f00a4b2470" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-248b05b5bb0f70da8376c2f00a4b2470"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png"></a></p>
 <p>此时，应该就可以用了。开个窗口测试一下
 <code>http://homeassistant.local:7681/</code>
 进入后输入login 回车
 输入curl <a href="https://www.google.com" rel="external" target="_self">www.google.com</a>回车</p>
 <p>是不是看到google页面返回的网页源码了？</p>
-<p><a href="#R-image-dda2dfe70649e419112ea8ac34a45f4e" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-dda2dfe70649e419112ea8ac34a45f4e"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg"></a></p>
+<p><a href="#R-image-3bb18de919be1cb71de31f04dd6237e4" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3bb18de919be1cb71de31f04dd6237e4"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg"></a></p>
 <p>如果不行，请检查是不是节点或者订阅连接有问题</p>
 <p>关于 v2raya的其他配置，请自行bing。</p>
 <p>其他电脑想要科学上网，也可以修改网络配置，将网关设置为HA盒子的ip地址，也能通过HA盒子实现科学上网的梦想，实现上网自由。</p>
+
+<script
+  id="utteranc"
+  src="https://utteranc.es/client.js"
+  repo="cntv-chat/ha-box"
+  issue-term="pathname"
+  theme="github-light"
+  crossorigin="anonymous"
+  async
+></script>
+<script>
+  document.getElementById("theme-toggle").addEventListener("click", () => {
+    const theme = document.body.className.includes("dark")
+      ? "github-light"
+      : "photon-dark";
+    const message = {
+      type: "set-theme",
+      theme: theme,
+    };
+    const utteranc = document.querySelector(".utterances-frame");
+    utteranc.contentWindow.postMessage(message, "https://utteranc.es");
+  });
+</script>
+
 
             <footer class="footline">
             </footer>
@@ -217,13 +244,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1725508239" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1725508239" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725508239" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1725508239" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1725508239" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1725508239" defer></script>
-        <script src="../../js/search.js?1725508239" defer></script>
+        <script src="../../js/auto-complete.js?1725608895" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1725608895" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725608895" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1725608895" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1725608895" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1725608895" defer></script>
+        <script src="../../js/search.js?1725608895" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -302,15 +329,22 @@
               </li>
             </ul>
           </div>
-          <div id="R-footer" class="footerFooter showFooter">
+          <div id="R-footer" class="footerFooter showFooter"><script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
+<p><span id="busuanzi_container_site_pv">本站总访问量 <span id="busuanzi_value_site_pv"></span> 次  </span></p>
+<span id="busuanzi_container_site_uv">您是本站第 <span id="busuanzi_value_site_uv"></span> 位访问者</span>
+
 	    <p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p>
+
           </div>
         </div>
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1725508239" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725508239" defer></script>
-    <script src="../../js/theme.js?1725508239" defer></script>
+    <script src="../../js/clipboard.min.js?1725608895" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725608895" defer></script>
+    <script src="../../js/theme.js?1725608895" defer></script>
+
+
   </body>
 </html>
