--- a/public/network/linux-partition/index.print.html
+++ b/public/network/linux-partition/index.print.html
@@ -43,18 +43,18 @@
     <link href="http://localhost:1313/network/linux-partition/index.html" rel="canonical" type="text/html" title="linux下无损扩容分区方法 :: HaBox 技术支持站">
     <link href="../../network/linux-partition/index.xml" rel="alternate" type="application/rss+xml" title="linux下无损扩容分区方法 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725546551" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725546551" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725546551" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725546551" rel="stylesheet">
-    <link href="../../css/fonts.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725546551" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725546551" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725546551" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725546551" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725546551" rel="stylesheet">
-    <link href="../../css/print.css?1725546551" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1725546551" rel="stylesheet">
-    <script src="../../js/variant.js?1725546551"></script>
+    <link href="../../css/fontawesome-all.min.css?1725607951" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725607951" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725607951" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725607951" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725607951" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725607951" rel="stylesheet">
+    <link href="../../css/fonts.css?1725607951" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725607951" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725607951" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725607951" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725607951" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725607951" rel="stylesheet">
+    <link href="../../css/print.css?1725607951" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1725607951" rel="stylesheet">
+    <script src="../../js/variant.js?1725607951"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -129,12 +129,7 @@
 <p>可以使用</p>
 <div class="highlight wrap-code"><pre tabindex="0"><code>df -h sudo fdisk -l</code></pre></div><p>等命令查看。</p>
 
-            <footer class="footline">
-            </footer>
-          </article>
-
-        </div>
-      </main><script
+<script
   id="utteranc"
   src="https://utteranc.es/client.js"
   repo="cntv-chat/ha-box"
@@ -158,9 +153,17 @@
 </script>
 
 
+            <footer class="footline">
+            </footer>
+          </article>
+
+        </div>
+      </main>
     </div>
-    <script src="../../js/clipboard.min.js?1725546551" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725546551" defer></script>
-    <script src="../../js/theme.js?1725546551" defer></script>
+    <script src="../../js/clipboard.min.js?1725607951" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725607951" defer></script>
+    <script src="../../js/theme.js?1725607951" defer></script>
+
+
   </body>
 </html>
